add photo and html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
             </nav>
         </div>    
     </header>
+    
+
+    <main>
+        <h1>I'm Alex and I'm a web developer.</h1>
+        <img src="/img/IMG_2511.jpeg" alt="picture of alex on a hike">
+    </main>
 </body>
 </html>
