add photo and overlap on main page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <nav>
                 <div class="logo-square">AJ</div>
                 <ul>
-                    <li><a href="/index.html">About Me</a></li>
-                    <li><a href="/portfolio.html">Portfolio</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="./index.html">About Me</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>    
@@ -23,8 +23,18 @@
     
 
     <main>
-        <h1>I'm Alex and I'm a web developer.</h1>
-        <img src="/img/IMG_2511.jpeg" alt="picture of alex on a hike">
-    </main>
+        <div class="main-border">
+            <h1>I'm Alex and I'm a Web Developer.</h1>
+        </div>
+        <div class="main-container">
+            <img class="main-photo left" src="./img/IMG_2513.PNG" alt="picture of alex on a hike">
+            <div class="right">
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Lacus vel facilisis volutpat est velit egestas dui id. Aliquet lectus proin nibh nisl condimentum id venenatis a. Id venenatis a condimentum vitae sapien pellentesque habitant. Mi bibendum neque egestas congue quisque egestas diam in arcu. Massa tincidunt nunc pulvinar sapien et ligula. Pellentesque habitant morbi tristique senectus et netus. Mattis aliquam faucibus purus in massa tempor. Eleifend mi in nulla posuere sollicitudin aliquam ultrices. Turpis massa tincidunt dui ut ornare lectus sit amet. Integer enim neque volutpat ac tincidunt vitae semper. Lectus mauris ultrices eros in cursus turpis. Posuere morbi leo urna molestie at. Semper quis lectus nulla at volutpat diam. Vitae sapien pellentesque habitant morbi tristique. Netus et malesuada fames ac turpis egestas integer eget aliquet.
+                    </p>
+                </div>
+            </div>
+        </div>
+            </main>
 </body>
 </html>
