made some changes

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         </div>
             </main>
 </body>
-<footer>adding some text to test</footer>
+<footer>adding some text to test <br> still testing
+</footer>
 </html>
