added footer for real

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </div>
             </main>
 </body>
-<footer>adding some text to test <br> still testing
+<footer>
+    <ul class="sociallinks">
+        <li><a href="https://twitter.com/alexjarmer">Twitter</a></li>
+        <li><a href="https://intagram.com/alexjarmer">Instagram</a></li>
+        <li><a href="https://LinkedIn.com/alexjarmer">LinkedIn</a></li>
+    </ul>
 </footer>
 </html>
