--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,11 @@
     </header>
     
     <main>
-        <p></p>
+        <div class="portfolio-container">
+            <div class="portfolioleft"></div>
+            <div class="portfolioright"></div>
+        </div>
+
     </main>
 
 </body>
