add place holder photos for portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
     
     <main>
         <div class="portfolio-container">
-            <div class="portfolioleft"></div>
-            <div class="portfolioright"></div>
+            <div class="portfolioleft"><img src="./img/cat.jpeg" alt="lion's head up close"></div>
+            <div class="portfolioright"><p>Some text about the project</p></div>
         </div>
 
     </main>
