add more photos, finish portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,39 @@
     
     <main>
         <div class="portfolio-container">
-            <div class="portfolioleft"><img src="./img/cat.jpeg" alt="lion's head up close"></div>
-            <div class="portfolioright"><p>Some text about the project</p></div>
+            <div class="portfolio"><img src="./img/cat.jpeg" alt="lion's head up close"></div>
+            <div class="portfolio">
+                <p>Some text about the project
+                <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius suscipit erat, ac pretium turpis rhoncus sit amet. Vestibulum viverra mauris ut arcu semper, molestie varius lacus efficitur. In condimentum, justo non gravida rhoncus, eros metus pellentesque mi, sed imperdiet eros tortor et justo. Curabitur arcu orci, ullamcorper sed magna et, elementum ultrices erat. Donec ante felis, varius at dui pulvinar, sagittis efficitur mi. Curabitur imperdiet quis tortor sed luctus. Ut pharetra ex in erat pellentesque elementum.
+                </p>
+            </div>
+        </div>
+
+        <div class="portfolio-container">
+            <div class="portfolio">
+                <p>Some text about the project
+                <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius suscipit erat, ac pretium turpis rhoncus sit amet. Vestibulum viverra mauris ut arcu semper, molestie varius lacus efficitur. In condimentum, justo non gravida rhoncus, eros metus pellentesque mi, sed imperdiet eros tortor et justo. Curabitur arcu orci, ullamcorper sed magna et, elementum ultrices erat. Donec ante felis, varius at dui pulvinar, sagittis efficitur mi. Curabitur imperdiet quis tortor sed luctus. Ut pharetra ex in erat pellentesque elementum.
+                </p>
+            </div>
+            <div class="portfolio"><img src="./img/bird.jpeg" alt="lion's head up close"></div>
+        </div>
+
+          <div class="portfolio-container">
+            <div class="portfolio"><img src="./img/lizard.jpeg" alt="lion's head up close"></div>
+            <div class="portfolio">
+                <p>Some text about the project
+                <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius suscipit erat, ac pretium turpis rhoncus sit amet. Vestibulum viverra mauris ut arcu semper, molestie varius lacus efficitur. In condimentum, justo non gravida rhoncus, eros metus pellentesque mi, sed imperdiet eros tortor et justo. Curabitur arcu orci, ullamcorper sed magna et, elementum ultrices erat. Donec ante felis, varius at dui pulvinar, sagittis efficitur mi. Curabitur imperdiet quis tortor sed luctus. Ut pharetra ex in erat pellentesque elementum.
+                </p>
+            </div>
+        </div>
+
+           <div class="portfolio-container">
+            <div class="portfolio">
+                <p>Some text about the project
+                <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius suscipit erat, ac pretium turpis rhoncus sit amet. Vestibulum viverra mauris ut arcu semper, molestie varius lacus efficitur. In condimentum, justo non gravida rhoncus, eros metus pellentesque mi, sed imperdiet eros tortor et justo. Curabitur arcu orci, ullamcorper sed magna et, elementum ultrices erat. Donec ante felis, varius at dui pulvinar, sagittis efficitur mi. Curabitur imperdiet quis tortor sed luctus. Ut pharetra ex in erat pellentesque elementum.
+                </p>
+            </div>
+            <div class="portfolio"><img src="./img/lamb.jpeg" alt="lion's head up close"></div>
         </div>
 
     </main>
