create contact page. still need to fill

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,5 +59,14 @@
         </div>
 
     </main>
+    
+    <footer>
+        <ul class="sociallinks">
+            <li><a href="https://twitter.com/alexjarmer">Twitter</a></li>
+            <li><a href="https://intagram.com/alexjarmer">Instagram</a></li>
+            <li><a href="https://LinkedIn.com/alexjarmer">LinkedIn</a></li>
+        </ul>
+    </footer>
 
 </body>
+
