add form for contact page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,17 @@
 
     <main>
         <h1>Please feel free to reach out to collab!</h1>
-        <form action=""></form>
+        <form action="">
+            <label for="fname">First name:</label><br>
+            <input type="text"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text"><br>
+            <label for="email">Email address:</label><br>
+            <input type="text"><br>
+            <label for="message">Message:</label><br>
+            <textarea id="w3review" name="w3review" rows="4" cols="50">
+
+        </form>
     </main>    
 
     <footer>
