--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <label for="email">Email address:</label><br>
             <input type="text"><br>
             <label for="message">Message:</label><br>
-            <textarea id="w3review" name="w3review" rows="4" cols="50">
+            <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
 
         </form>
     </main>    
