more testing js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     
 
     <main>
+        <button id="demo" onclick="changeClick()">Click me</button>
+        <p id="changeMe"></p>
         <div class="main-border">
             <h1>I'm Alex and I'm a Web Developer.</h1>
         </div>
@@ -45,5 +47,5 @@
         </ul>
     </footer>        
 </body>
-<script src="./app.js"></script>
+<script src="/app.js"></script>
 </html>
