--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
 
     <main>
-        <button id="demo" onclick="changeClick()">Click me</button>
+        <button onclick="changeClick()">Click me</button>
         <p id="changeMe"></p>
         <div class="main-border">
             <h1>I'm Alex and I'm a Web Developer.</h1>
@@ -47,5 +47,5 @@
         </ul>
     </footer>        
 </body>
-<script src="/app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </html>
