changes to add div in NAV

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="nav-container">
             <nav>
                 <div class="logo-square">AJ</div>
-                <ul>
+                <ul id="nav-open">
                     <li><a href="./index.html">About Me</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
+                <div id="nav-closed"></div>
             </nav>
         </div>    
     </header>
