start mobile nav hamburger lines

--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
         <div class="nav-container">
             <nav>
                 <div class="logo-square">AJ</div>
-                <ul id="nav-open">
+                <ul id="desktop-nav">
                     <li><a href="./index.html">About Me</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
-                <div id="nav-closed"></div>
             </nav>
+            <div id="mobile-nav">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <ul>
+                    <li><a href="./index.html">About Me</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>    
     </header>
     
