still working on hamburger lines

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
                 </ul>
             </nav>
             <div id="mobile-nav">
-                <div class="hamburger-line"></div>
-                <div class="hamburger-line"></div>
-                <div class="hamburger-line"></div>
+                <div class="hamburger-container">
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                </div>
                 <ul>
                     <li><a href="./index.html">About Me</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
