--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
 <body>
     <header>
         <div class="nav-container">
-            <nav>
-                <div class="logo-square">AJ</div>
+            <div class="logo-square">AJ</div>
                 <ul id="desktop-nav">
                     <li><a href="./index.html">About Me</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
-            </nav>
             <div id="mobile-nav">
                 <div class="hamburger-container">
                     <div class="hamburger-line"></div>
                     <div class="hamburger-line"></div>
                     <div class="hamburger-line"></div>
                 </div>
-                <ul>
-                    <li><a href="./index.html">About Me</a></li>
-                    <li><a href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                </ul>
             </div>
-        </div>    
+        </div>  
+        <ul class="dropdown">
+            <li><a href="./index.html">About Me</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
     </header>
     
 
