--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             <div id="mobile-nav">
-                <div class="hamburger-container">
+                <div class="hamburger-container" onclick="navDropDown()">
                     <div class="hamburger-line"></div>
                     <div class="hamburger-line"></div>
                     <div class="hamburger-line"></div>
