--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>  
-        <ul class="dropdown">
+        <ul id="dropdown">
             <li><a href="./index.html">About Me</a></li>
             <li><a href="./portfolio.html">Portfolio</a></li>
             <li><a href="./contact.html">Contact</a></li>
